--- a/shop.html
+++ b/shop.html
@@ -360,7 +360,7 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://picklesballs.github.io/">Picklesballs</a>
         </p>
       </div>
     </div>
