--- a/item.html
+++ b/item.html
@@ -8,9 +8,9 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="Pickleballs, Paddles, Online Store" />
+  <meta name="description" content="Pickleballs, Paddles, Online Store in your neighborhood" />
+  <meta name="author" content="Pickleballs" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>Pickleballs</title>
