--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Features Of Our Pickleballs
+          Our Merchandise Expertise
         </h2>
         <p>
           Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -440,7 +440,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Fitness Tracking
+                Paddles
               </h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -461,7 +461,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Alerts & Notifications
+                Paddle Sets
               </h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -482,7 +482,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Messages
+                Accessories
               </h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -503,7 +503,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Bluetooth
+                Balls
               </h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -522,6 +522,48 @@
         <a href="">
           View More
         </a>
+      </div>
+    </div>
+  </section>
+
+  <section class="about_section layout_padding">
+    <div class="container  ">
+      <div class="row">
+        <div class="col-md-12 col-lg-12 ">
+          <div id="demo" class="carousel slide" data-ride="carousel">
+            <ul class="carousel-indicators">
+              <li data-target="#demo" data-slide-to="0" class="active"></li>
+              <li data-target="#demo" data-slide-to="1"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner" style="height: 200px;">
+              <div class="carousel-item active">
+                <div class="carousel-caption" style="top: 50%;">
+                  <h3>What is pickleball?</h3>
+                  <p>Pickleball is a racquet sport played on a court with paddles and a ball. It combines elements of tennis, badminton and ping-pong, but is played on a court about 1/3 the size of a tennis court.</p>
+                </div>   
+              </div>
+              <div class="carousel-item">
+                <div class="carousel-caption" style="top: 50%;">
+                  <h3>What is the origin of pickleball?</h3>
+                  <p>Pickleball was invented in 1965 by three fathers in Washington State who were looking for a new backyard game to play with their families on a summer day on Bainbridge Island.</p>
+                </div>   
+              </div>
+              <div class="carousel-item">
+                <div class="carousel-caption" style="top: 50%;">
+                  <h3>What is the court size for pickleball?</h3>
+                  <p>The pickleball court is similar in size to a badminton court, measuring 20 feet by 44 feet for singles play. The net is positioned at a height of 36 inches at the edges and slopes to 34 inches at the center.</p>
+                </div>   
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
