--- a/login.html
+++ b/login.html
@@ -94,25 +94,19 @@
           <div class="form_container">
             <div class="heading_container">
               <h2>
-                Contact Us
+                Sign In
               </h2>
             </div>
             <form action="">
               <div>
-                <input type="text" placeholder="Full Name " />
-              </div>
-              <div>
                 <input type="email" placeholder="Email" />
               </div>
               <div>
-                <input type="text" placeholder="Phone number" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="password" placeholder="Password" />
               </div>
               <div class="d-flex ">
                 <button>
-                  SEND
+                  Login
                 </button>
               </div>
             </form>
