--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
   <div class="hero_area">
     <div class="hero_social">
-      <a href="https://www.facebook.com">
+      <a href="https://www.facebook.com" target="_blank">
         <i class="fa fa-facebook" aria-hidden="true"></i>
       </a>
-      <a href="https://www.twitter.com">
+      <a href="https://www.twitter.com" target="_blank">
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </a>
-      <a href="https://wwww.linkedin.com">
+      <a href="https://wwww.linkedin.com" target="_blank">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
-      <a href="https://www.instagram.com">
+      <a href="https://www.instagram.com" target="_blank">
         <i class="fa fa-instagram" aria-hidden="true"></i>
       </a>
     </div>
@@ -701,16 +701,16 @@
               Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
             </p>
             <div class="footer_social">
-              <a href="https://www.facebook.com">
+              <a href="https://www.facebook.com" target="_blank">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://www.twitter.com">
+              <a href="https://www.twitter.com" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="https://www.linkedin.com">
+              <a href="https://www.linkedin.com" target="_blank">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-              <a href="https://www.instagram.com">
+              <a href="https://www.instagram.com" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
