--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
       <a href="https://www.twitter.com" target="_blank">
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </a>
-      <a href="https://wwww.linkedin.com" target="_blank">
+      <a href="https://www.linkedin.com" target="_blank">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
       <a href="https://www.instagram.com" target="_blank">
