--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Pickleground Locations</a>
               </li>
             </ul>
             <div class="user_option-box">
