--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="contact.html">Pickleground Locations<span class="sr-only">(current)</span> </a>
               </li>
             </ul>
             <div class="user_option-box">
