updated UI and added pages

--- a/item.html
+++ b/item.html
@@ -58,10 +58,13 @@
                 <a class="nav-link" href="shop.html"> Shop <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="blogs.html"> Blogs </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Pickleground Locations</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <div class="user_option-box">
@@ -88,7 +91,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Latest Pickleballs
+          Pickleball Paddle
         </h2>
       </div>
       <div class="row">
@@ -117,161 +120,38 @@
             </a>
           </div>
         </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w9.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $125
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
+        <div class="col-md-6 pl-5">
+          <div class="product-detail">
+            <h1>NEOPRENE PICKLEBALL PADDLE COVER (GREEN)</h1>
+            <p>Pickle ball paddle</p>
+            <span class="price colored">$45.00</span>
+  
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. 
+            </p>
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+  
+            <button type="submit" name="add-to-cart" value="27545" class="button" style="width: 100%;
+            text-align: center;
+            display: inline-block;
+            padding: 10px 55px;
+            background-color: #f0d43a;
+            color: #ffffff;
+            border-radius: 5px;
+            -webkit-transition: all 0.3s;
+            transition: all 0.3s;
+            border: 1px solid #f0d43a;
+            margin-top: 15px;">Add to cart</button>
+            
           </div>
         </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w9.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $110
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w9.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $145
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w9.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $195
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6  col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w9.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $170
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/w8.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Pickleball
-                </h6>
-                <h6>
-                  Price:
-                  <span>
-                    $230
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          View All
-        </a>
       </div>
     </div>
   </section>
@@ -309,6 +189,37 @@
         <div class="col-md-6 col-lg-3 footer-col">
           <div class="footer_contact">
             <h4>
+              Links
+            </h4>
+            <div class="contact_link_box">
+              <ul class="no-bullets site-footer__linklist">
+                <li><a href="#">SEARCH</a></li>
+                <li><a href="#">PICKLEBALL FAQS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="shop.html">RETAIL AND WHOLESALE</a></li>
+                <li><a
+                    href="#">AFFILIATE
+                    PROGRAM</a></li>
+                <li><a href="#">SHIPPING POLICY</a></li>
+                <li><a href="#">REFUND POLICY</a></li>
+                <li><a href="#">PRIVACY POLICY</a></li>
+                <li><a href="#">WARRANTY POLICY</a></li>
+                <li><a href="#">TERMS OF SERVICE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 footer-col">
+          <div class="footer_contact">
+            <h4>
+              Subscribe
+            </h4>
+            <form action="#">
+              <input type="text" placeholder="Enter email" />
+              <button type="submit">
+                Subscribe
+              </button>
+            </form><h4>
               Reach at..
             </h4>
             <div class="contact_link_box">
@@ -334,22 +245,15 @@
           </div>
         </div>
         <div class="col-md-6 col-lg-3 footer-col">
-          <div class="footer_contact">
-            <h4>
-              Subscribe
-            </h4>
-            <form action="#">
-              <input type="text" placeholder="Enter email" />
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 footer-col">
           <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
+            <div class="map1">
+              <div id="googleMap1">
+                <div class="mapouter">
+                  <div class="gmap_canvas">
+                    <iframe width="300" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=lemon+grove&t=&z=13&ie=UTF8&z=12&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
