--- a/404.html
+++ b/404.html
@@ -19,7 +19,8 @@
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -58,7 +59,8 @@
             </span>
           </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
           </button>
 
@@ -71,13 +73,13 @@
                 <a class="nav-link" href="shop.html"> Shop </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> Blogs </a>
+                <a class="nav-link" href="blogs.html"> Blogs </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">PickleGround Locations</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <div class="user_option-box">
@@ -109,7 +111,8 @@
                       Pickleballs
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit
+                      amet, lobortis semper quam.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -135,7 +138,8 @@
                       Pickleballs
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit
+                      amet, lobortis semper quam.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -161,7 +165,8 @@
                       Pickleballs
                     </h1>
                     <p>
-                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
+                      Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit
+                      amet, lobortis semper quam.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -535,25 +540,53 @@
               <li data-target="#demo" data-slide-to="0" class="active"></li>
               <li data-target="#demo" data-slide-to="1"></li>
               <li data-target="#demo" data-slide-to="2"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
             </ul>
-            <div class="carousel-inner" style="height: 200px;">
+            <div class="carousel-inner" style="height: 500px;">
               <div class="carousel-item active">
                 <div class="carousel-caption" style="top: 50%;">
                   <h3>What is pickleball?</h3>
-                  <p>Pickleball is a racquet sport played on a court with paddles and a ball. It combines elements of tennis, badminton and ping-pong, but is played on a court about 1/3 the size of a tennis court.</p>
-                </div>   
+                  <p>Pickleball is a racquet sport played on a court with paddles and a ball. It combines elements of
+                    tennis, badminton and ping-pong, but is played on a court about 1/3 the size of a tennis
+                    court.<br><br><br><br>To play pickleball, two or four players hit a perforated ball over a net using
+                    paddles. The ball is served diagonally across the court and players try to rally the ball back and
+                    forth over the net, similar to tennis. Points are scored by the serving team when a player on the
+                    opposing team is unable to return the ball or hits it out of bounds, or commit another fault (like
+                    hitting it out of the air in the kitchen).</p>
+                </div>
               </div>
               <div class="carousel-item">
                 <div class="carousel-caption" style="top: 50%;">
                   <h3>What is the origin of pickleball?</h3>
-                  <p>Pickleball was invented in 1965 by three fathers in Washington State who were looking for a new backyard game to play with their families on a summer day on Bainbridge Island.</p>
-                </div>   
+                  <p>Pickleball was invented in 1965 by three fathers in Washington State who were looking for a new
+                    backyard game to play with their families on a summer day on Bainbridge Island.<br><br><br><br>To
+                    play pickleball, two or four players hit a perforated ball over a net using paddles. The ball is
+                    served diagonally across the court and players try to rally the ball back and forth over the net,
+                    similar to tennis. Points are scored by the serving team when a player on the opposing team is
+                    unable to return the ball or hits it out of bounds, or commit another fault (like hitting it out of
+                    the air in the kitchen).</p>
+                </div>
               </div>
               <div class="carousel-item">
                 <div class="carousel-caption" style="top: 50%;">
                   <h3>What is the court size for pickleball?</h3>
-                  <p>The pickleball court is similar in size to a badminton court, measuring 20 feet by 44 feet for singles play. The net is positioned at a height of 36 inches at the edges and slopes to 34 inches at the center.</p>
-                </div>   
+                  <p>The pickleball court is similar in size to a badminton court, measuring 20 feet by 44 feet for
+                    singles play. The net is positioned at a height of 36 inches at the edges and slopes to 34 inches at
+                    the center.<br><br><br><br>To play pickleball, two or four players hit a perforated ball over a net
+                    using paddles. The ball is served diagonally across the court and players try to rally the ball back
+                    and forth over the net, similar to tennis. Points are scored by the serving team when a player on
+                    the opposing team is unable to return the ball or hits it out of bounds, or commit another fault
+                    (like hitting it out of the air in the kitchen).</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="carousel-caption" style="top: 50%;">
+                  <h3>Learn Pickleball on Youtube</h3>
+                  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/Se7wIlGeo_o"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe></p>
+                </div>
               </div>
             </div>
             <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -572,7 +605,7 @@
 
   <!-- contact section -->
 
-  <section class="contact_section">
+  <!--section class="contact_section">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -610,7 +643,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section-->
 
   <!-- end contact section -->
 
@@ -698,7 +731,8 @@
               About
             </h4>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
+              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
+              words, combined with
             </p>
             <div class="footer_social">
               <a href="https://www.facebook.com" target="_blank">
@@ -715,10 +749,44 @@
               </a>
             </div>
           </div>
+          <div class="footer_detail">
+            
+          </div>
         </div>
         <div class="col-md-6 col-lg-3 footer-col">
           <div class="footer_contact">
             <h4>
+              Links
+            </h4>
+            <div class="contact_link_box">
+              <ul class="no-bullets site-footer__linklist">
+                <li><a href="#">SEARCH</a></li>
+                <li><a href="#">PICKLEBALL FAQS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="shop.html">RETAIL AND WHOLESALE</a></li>
+                <li><a
+                    href="#">AFFILIATE
+                    PROGRAM</a></li>
+                <li><a href="#">SHIPPING POLICY</a></li>
+                <li><a href="#">REFUND POLICY</a></li>
+                <li><a href="#">PRIVACY POLICY</a></li>
+                <li><a href="#">WARRANTY POLICY</a></li>
+                <li><a href="#">TERMS OF SERVICE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 footer-col">
+          <div class="footer_contact">
+            <h4>
+              Subscribe
+            </h4>
+            <form action="#">
+              <input type="text" placeholder="Enter email" />
+              <button type="submit">
+                Subscribe
+              </button>
+            </form><h4>
               Reach at..
             </h4>
             <div class="contact_link_box">
@@ -744,22 +812,17 @@
           </div>
         </div>
         <div class="col-md-6 col-lg-3 footer-col">
-          <div class="footer_contact">
-            <h4>
-              Subscribe
-            </h4>
-            <form action="#">
-              <input type="text" placeholder="Enter email" />
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 footer-col">
           <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
+            <div class="map1">
+              <div id="googleMap1">
+                <div class="mapouter">
+                  <div class="gmap_canvas">
+                    <iframe width="300" height="250" id="gmap_canvas"
+                      src="https://maps.google.com/maps?q=lemon+grove&t=&z=13&ie=UTF8&z=12&iwloc=&output=embed"
+                      frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -777,8 +840,9 @@
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
   <!-- bootstrap js -->
   <script src="js/bootstrap.js"></script>
   <!-- owl slider -->
@@ -787,7 +851,8 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 
 </body>
