--- a/about.html
+++ b/about.html
@@ -57,13 +57,13 @@
                 <a class="nav-link" href="shop.html"> Shop </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> Blogs </a>
+                <a class="nav-link" href="blogs.html"> Blogs </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Pickleground Locations</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <div class="user_option-box">
@@ -116,6 +116,37 @@
     </div>
   </section>
 
+  <section class="about_section" style="background-color: #F5DEB3;">
+    <div class="container  ">
+      <div class="row">
+        <div class="col-md-6 col-lg-5 ">
+          <div class="img-box">
+            <img src="images/about-img1.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-7">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                Our Team
+              </h2>
+            </div>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
+              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
+              the middle of text. All
+            </p>
+            <a href="">
+              Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!-- end about section -->
 
   <!-- footer section -->
@@ -149,6 +180,37 @@
         <div class="col-md-6 col-lg-3 footer-col">
           <div class="footer_contact">
             <h4>
+              Links
+            </h4>
+            <div class="contact_link_box">
+              <ul class="no-bullets site-footer__linklist">
+                <li><a href="#">SEARCH</a></li>
+                <li><a href="#">PICKLEBALL FAQS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="shop.html">RETAIL AND WHOLESALE</a></li>
+                <li><a
+                    href="#">AFFILIATE
+                    PROGRAM</a></li>
+                <li><a href="#">SHIPPING POLICY</a></li>
+                <li><a href="#">REFUND POLICY</a></li>
+                <li><a href="#">PRIVACY POLICY</a></li>
+                <li><a href="#">WARRANTY POLICY</a></li>
+                <li><a href="#">TERMS OF SERVICE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 footer-col">
+          <div class="footer_contact">
+            <h4>
+              Subscribe
+            </h4>
+            <form action="#">
+              <input type="text" placeholder="Enter email" />
+              <button type="submit">
+                Subscribe
+              </button>
+            </form><h4>
               Reach at..
             </h4>
             <div class="contact_link_box">
@@ -174,22 +236,15 @@
           </div>
         </div>
         <div class="col-md-6 col-lg-3 footer-col">
-          <div class="footer_contact">
-            <h4>
-              Subscribe
-            </h4>
-            <form action="#">
-              <input type="text" placeholder="Enter email" />
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 footer-col">
           <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
+            <div class="map1">
+              <div id="googleMap1">
+                <div class="mapouter">
+                  <div class="gmap_canvas">
+                    <iframe width="300" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=lemon+grove&t=&z=13&ie=UTF8&z=12&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
