--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Pickleground Locations</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <div class="user_option-box">
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w8.png" alt="">
               </div>
@@ -122,7 +122,7 @@
         </div>
         <div class="col-sm-6 col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w9.png" alt="">
               </div>
@@ -147,7 +147,7 @@
         </div>
         <div class="col-sm-6 col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w9.png" alt="">
               </div>
@@ -172,7 +172,7 @@
         </div>
         <div class="col-sm-6 col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w9.png" alt="">
               </div>
@@ -197,7 +197,7 @@
         </div>
         <div class="col-sm-6 col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w9.png" alt="">
               </div>
@@ -222,7 +222,7 @@
         </div>
         <div class="col-sm-6  col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w9.png" alt="">
               </div>
@@ -247,7 +247,7 @@
         </div>
         <div class="col-sm-6 col-xl-3">
           <div class="box">
-            <a href="">
+            <a href="item.html">
               <div class="img-box">
                 <img src="images/w8.png" alt="">
               </div>
@@ -312,6 +312,37 @@
         <div class="col-md-6 col-lg-3 footer-col">
           <div class="footer_contact">
             <h4>
+              Links
+            </h4>
+            <div class="contact_link_box">
+              <ul class="no-bullets site-footer__linklist">
+                <li><a href="#">SEARCH</a></li>
+                <li><a href="#">PICKLEBALL FAQS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="shop.html">RETAIL AND WHOLESALE</a></li>
+                <li><a
+                    href="#">AFFILIATE
+                    PROGRAM</a></li>
+                <li><a href="#">SHIPPING POLICY</a></li>
+                <li><a href="#">REFUND POLICY</a></li>
+                <li><a href="#">PRIVACY POLICY</a></li>
+                <li><a href="#">WARRANTY POLICY</a></li>
+                <li><a href="#">TERMS OF SERVICE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 footer-col">
+          <div class="footer_contact">
+            <h4>
+              Subscribe
+            </h4>
+            <form action="#">
+              <input type="text" placeholder="Enter email" />
+              <button type="submit">
+                Subscribe
+              </button>
+            </form><h4>
               Reach at..
             </h4>
             <div class="contact_link_box">
@@ -337,22 +368,15 @@
           </div>
         </div>
         <div class="col-md-6 col-lg-3 footer-col">
-          <div class="footer_contact">
-            <h4>
-              Subscribe
-            </h4>
-            <form action="#">
-              <input type="text" placeholder="Enter email" />
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 footer-col">
           <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
+            <div class="map1">
+              <div id="googleMap1">
+                <div class="mapouter">
+                  <div class="gmap_canvas">
+                    <iframe width="300" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=lemon+grove&t=&z=13&ie=UTF8&z=12&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
