--- a/blogsingle.html
+++ b/blogsingle.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="page-title">Why Do We Need An Architect Before Building a House?</h1>
+                    <h1 class="page-title">How to Keep Score in Pickleball</h1>
                     <!--div class="breadcrumbs">
                         <span class="item"><a href="index.html">Home /</a></span>
                         <span class="item">Construction Tips</span>
