--- a/404.html
+++ b/404.html
@@ -441,7 +441,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/f1.png" alt="">
+              <img src="images/f5.jpeg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -462,7 +462,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/f2.png" alt="">
+              <img src="images/f5.jpeg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -483,7 +483,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/f3.png" alt="">
+              <img src="images/f5.jpeg" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -504,7 +504,7 @@
         <div class="col-sm-6 col-lg-3">
           <div class="box">
             <div class="img-box">
-              <img src="images/f4.png" alt="">
+              <img src="images/f5.jpeg" alt="">
             </div>
             <div class="detail-box">
               <h5>
