--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="picklecourts.html">PickleCourts</a>
+              </li>
             </ul>
             <div class="user_option-box">
               <a href="login.html">
@@ -116,7 +119,7 @@
     </div>
   </section>
 
-  <section class="about_section" style="background-color: #F5DEB3;">
+  <section class="about_section" style="background-color: #ffffff;">
     <div class="container  ">
       <div class="row">
         <div class="col-md-6 col-lg-5 ">
@@ -162,17 +165,21 @@
               Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
             </p>
             <div class="footer_social">
-              <a href="https://www.facebook.com" target="_blank">
+              <a href="https://www.facebook.com" target="_blank" style="color: #1778f2;">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://www.twitter.com" target="_blank">
+              <a href="https://www.twitter.com" target="_blank" style="color: #00acee;">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="https://www.linkedin.com" target="_blank">
+              <a href="https://www.linkedin.com" target="_blank" style="color: #0072b1;">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
               <a href="https://www.instagram.com" target="_blank">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true" style="font-size:30px;
+        background: #d6249f;
+        background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;"></i>
               </a>
             </div>
           </div>
